Update HomeMatch.ipynb to remove API Key
Signed-off-by: Hani ElSakkout <sakkout@gmail.com>

--- a/HomeMatch.ipynb
+++ b/HomeMatch.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "6554fd4c",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
     "from diffusers import StableDiffusion3Pipeline\n",
     "\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"YOUR-API-KEY",
+    "os.environ[\"OPENAI_API_KEY\"] = \"YOUR-API-KEY\"\n",
     "os.environ[\"OPENAI_API_BASE\"] = \"https://openai.vocareum.com/v1\"\n"
    ]
   },
