Update HomeMatch.ipynb to remove API Key
Signed-off-by: Hani ElSakkout <sakkout@gmail.com>

--- a/HomeMatch.ipynb
+++ b/HomeMatch.ipynb
@@ -45,7 +45,7 @@
     "from diffusers import StableDiffusion3Pipeline\n",
     "\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"voc-30237581412667733285796716cdfcba5865.61612652\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"YOUR-API-KEY",
     "os.environ[\"OPENAI_API_BASE\"] = \"https://openai.vocareum.com/v1\"\n"
    ]
   },
